erDiagram
    award {
        int id PK "AUTO_INCREMENT"
        int award_id "奖品业务ID"
        varchar_32 award_key "奖品对接标识"
        varchar_32 award_config "奖品配置信息"
        varchar_128 award_desc "奖品内容描述"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    strategy {
        bigint id PK "AUTO_INCREMENT"
        bigint strategy_id "抽奖策略ID"
        varchar_128 strategy_desc "策略描述"
        varchar_256 rule_models "规则模型，逗号分隔"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    strategy_award {
        bigint id PK "AUTO_INCREMENT"
        bigint strategy_id FK "抽奖策略ID"
        int award_id FK "奖品ID"
        varchar_128 award_title "奖品标题"
        varchar_128 award_subtitle "奖品副标题"
        int award_count "奖品库存总量"
        int award_count_surplus "奖品库存剩余"
        decimal award_rate "中奖概率"
        varchar_256 rule_models "规则树ID"
        int sort "排序"
        datetime create_time "创建时间"
        datetime update_time "修改时间"
    }

    strategy_rule {
        bigint id PK "AUTO_INCREMENT"
        int strategy_id FK "抽奖策略ID"
        int award_id "奖品ID"
        tinyint rule_type "1=策略规则 2=奖品规则"
        varchar_16 rule_model "规则类型"
        varchar_256 rule_value "规则比值"
        varchar_128 rule_desc "规则描述"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    raffle_activity {
        bigint id PK "AUTO_INCREMENT"
        bigint activity_id "活动ID"
        varchar_64 activity_name "活动名称"
        varchar_128 activity_desc "活动描述"
        datetime begin_date_time "开始时间"
        datetime end_date_time "结束时间"
        bigint strategy_id FK "抽奖策略ID"
        varchar_8 state "create/open/close"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    raffle_activity_count {
        bigint id PK "AUTO_INCREMENT"
        bigint activity_count_id "活动次数配置ID"
        int total_count "总参与次数上限"
        int day_count "每日参与次数上限"
        int month_count "每月参与次数上限"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    raffle_activity_sku {
        int id PK "AUTO_INCREMENT"
        bigint sku "商品SKU编号"
        bigint activity_id FK "活动ID"
        bigint activity_count_id FK "次数配置ID"
        int stock_count "商品总库存"
        int stock_count_surplus "剩余库存"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    raffle_activity_order {
        bigint id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint sku FK "商品SKU"
        bigint activity_id FK "活动ID"
        varchar_64 activity_name "活动名称（冗余）"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id "订单ID"
        datetime order_time "下单时间"
        int total_count "获得总次数"
        int day_count "获得日次数"
        int month_count "获得月次数"
        varchar_16 state "complete"
        varchar_64 out_business_no "业务防重ID"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    raffle_activity_account {
        bigint id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id FK "活动ID"
        int total_count "总次数额度"
        int total_count_surplus "总次数剩余"
        int day_count "日次数额度"
        int day_count_surplus "日次数剩余"
        int month_count "月次数额度"
        int month_count_surplus "月次数剩余"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    raffle_activity_account_day {
        int id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id FK "活动ID"
        varchar_10 day "yyyy-mm-dd"
        int day_count "当日次数额度"
        int day_count_surplus "当日次数剩余"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    raffle_activity_account_month {
        int id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id FK "活动ID"
        varchar_7 month "yyyy-mm"
        int month_count "当月次数额度"
        int month_count_surplus "当月次数剩余"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    task {
        int id PK "AUTO_INCREMENT"
        varchar_32 topic "消息主题"
        varchar_512 message "消息主体"
        varchar_16 state "create/completed/fail"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    user_raffle_order {
        int id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id FK "活动ID"
        varchar_64 activity_name "活动名称（冗余）"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id "抽奖单ID"
        datetime order_time "抽奖发起时间"
        varchar_16 order_state "create/used/cancel"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    user_award_record {
        int id PK "AUTO_INCREMENT"
        varchar_32 user_id "用户ID（路由键）"
        bigint activity_id "活动ID"
        bigint strategy_id "抽奖策略ID"
        varchar_12 order_id FK "抽奖单ID（与 user_raffle_order.order_id 一一对应）"
        int award_id "奖品ID"
        varchar_128 award_title "奖品标题（冗余）"
        datetime award_time "中奖时间"
        varchar_16 award_state "create/completed"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    rule_tree {
        bigint id PK "AUTO_INCREMENT"
        varchar_32 tree_id "规则树ID"
        varchar_64 tree_name "规则树名称"
        varchar_128 tree_desc "规则树描述"
        varchar_32 tree_node_rule_key "根入口规则Key"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    rule_tree_node {
        bigint id PK "AUTO_INCREMENT"
        varchar_32 tree_id FK "所属规则树ID"
        varchar_32 rule_key "规则Key"
        varchar_64 rule_desc "规则描述"
        varchar_128 rule_value "规则比值"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    rule_tree_node_line {
        bigint id PK "AUTO_INCREMENT"
        varchar_32 tree_id FK "所属规则树ID"
        varchar_32 rule_node_from "来源节点"
        varchar_32 rule_node_to "目标节点"
        varchar_8 rule_limit_type "EQUAL/GT/LT/GTE/LTE/ENUM"
        varchar_32 rule_limit_value "限定值"
        datetime create_time "创建时间"
        datetime update_time "更新时间"
    }

    award ||--o{ strategy_award : "award_id"
    strategy ||--o{ strategy_award : "strategy_id"
    strategy ||--o{ strategy_rule : "strategy_id"
    strategy_award }o--|| rule_tree : "rule_models → tree_id"
    strategy_rule }o--|| rule_tree : "rule_model → tree_id"
    rule_tree ||--o{ rule_tree_node : "tree_id"
    rule_tree ||--o{ rule_tree_node_line : "tree_id"

    raffle_activity ||--|| strategy : "strategy_id"
    raffle_activity ||--o{ raffle_activity_sku : "activity_id"
    raffle_activity_count ||--o{ raffle_activity_sku : "activity_count_id"
    raffle_activity_sku ||--o{ raffle_activity_order : "sku"
    raffle_activity ||--o{ raffle_activity_order : "activity_id"
    raffle_activity ||--o{ raffle_activity_account : "activity_id"
    raffle_activity ||--o{ raffle_activity_account_day : "activity_id"
    raffle_activity ||--o{ raffle_activity_account_month : "activity_id"
    raffle_activity_order ||--o{ user_raffle_order : "user_id + activity_id 关联（order_id 不同）"
    user_raffle_order ||--|| user_award_record : "order_id 一一对应（uq_order_id 幂等）"